--- a/Gestion_AcademicoAdministrativa_Abastos/UserPanel.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/UserPanel.xaml
@@ -225,10 +225,13 @@
                                 <Grid Grid.Row="3" Grid.Column="1">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="25*" />
-                                        <ColumnDefinition Width="50*" />
+                                        <ColumnDefinition Width="25*" />
+                                        <ColumnDefinition Width="10*" />
+                                        <ColumnDefinition Width="25*" />
                                         <ColumnDefinition Width="25*" />
                                     </Grid.ColumnDefinitions>
                                     <Button Grid.Column="1" x:Name="CreatePermisoButton" Content="Crear Permiso" Click="CreatePermisoButton_Click"/>
+                                    <Button Grid.Column="3" x:Name="RemovePermiso" Content="Eliminar Permiso" Click="RemovePermiso_Click"/>
                                 </Grid>
                                 <DataGrid Grid.Row="5" Grid.Column="1" x:Name="DataGridPermisos" AutoGenerateColumns="True" ColumnWidth="*">
                                     <DataGrid.ContextMenu>
