Fix UserPanel Password

--- a/Gestion_AcademicoAdministrativa_Abastos/UserPanel.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/UserPanel.xaml
@@ -82,7 +82,7 @@
                                             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
                                                 <Setter Property="Visibility" Value="Collapsed"/>
                                                 <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtUsername}" Value="">
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtPassword}" Value="">
                                                         <Setter Property="Visibility" Value="Visible"/>
                                                     </DataTrigger>
                                                 </Style.Triggers>
